--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant-TW">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>icon.png">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+
+    <meta name="description" content="Explore how AIoT solutions are bringing our future to the present.">
+    <meta property="og:image" content="https://aiot.innodisk.com/home/meta.jpg?v=20200922">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:description" content="Explore how AIoT solutions are bringing our future to the present.">
+    <meta property="og:type" content="website">
+    
+    <!-- <title><%= htmlWebpackPlugin.options.title %></title> -->
+    <title>Building an Intelligent World</title>
 
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
 
