--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>icon.png">
 
     <meta name="description" content="Explore how AIoT solutions are bringing our future to the present.">
-    <meta property="og:image" content="https://aiot.innodisk.com/home/meta.jpg?v=20200922">
+    <meta property="og:image" content="https://aiot.innodisk.com/intro/meta.jpg?v=20200922">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:description" content="Explore how AIoT solutions are bringing our future to the present.">
